--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,14 @@ theme: jekyll-agency
 url    : "" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 
-title      : XiROAD 자이로드
+title      : XiROAD
 email      : xiroadcorp@gmail.com #this is also the email contact forms will go to
 description: "모두가 도로 위에서 안전할 수 있도록"
 author     : Seohyun Kim
-# logo:     #optional, defaults to site title
-  # path: assets\img\clients\creative-market.jpg
-  # height: 60 #height in px, defaults to 52px
+
+logo:     #optional, defaults to site title
+  path: /assets/img/favicon/wordmark_white.png
+  height: 30 #height in px, defaults to 52px
 
 locale: "en-US" # See available languages in _data/sitetext.yml
 
