--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -11,8 +11,8 @@
 # -----------------
 en: &DEFAULT_EN
   header:
-    title: Hi, we are XiROAD
-    text: 도로 위에서 안전할 수 있도록
+    # title: 자이로드
+    text: For your safety ROAD
     button: Tell Me More
     buttonlink: "#services"
 
